2007-08-13  Olivier Blin <blino@mandriva.com>

	* doc/man/pam.3.xml: Fix typo.
	* doc/man/pam.3: Likewise.
	* doc/man/pam_end.3.xml: Likewise.
	* doc/man/pam_end.3: Likewise.

2007-07-18  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 0.99.8.1

	* libpam/pam_audit.c: Include unistd.h for getuid().
	* libpam/Makefile.am: Bump version number.

2007-07-12  Thorsten Kukuk  <kukuk@thkukuk.de>

	* libpam/pam_audit.c (_pam_audit_writelog): Don't return
	error if application runs as normal user. Fixes regression
	introduced with last change.

2007-07-10  Thorsten Kukuk  <kukuk@thkukuk.de>

	* configure.in: Add --with-db-uniquename option to support
	db libraries and functions with unique name extension.
	Patch from Diego 'Flameeyes' Pettenò <flameeyes@gmail.com>.

	* modules/pam_limits/pam_limits.c: Include locale.h.

2007-07-06  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 0.99.8.0

	* configure.in: Check for audit_log_acct_message instead of
	audit_log_user_message.
	* libpam/pam_audit.c: Use audit_log_acct_message.
	Based on patch from Mark J Cox <mjc@redhat.com>.
	* libpam/Makefile.am: Bump version number of libpam.

	* modules/pam_umask/pam_umask.c (set_umask): mode_t is 32bit,
	not 64bit.

	* xtests/tst-pam_limits1.c: Fix printf arguments.

	* po/*.po: Merge po files with latest code changes.

2007-06-26  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_limits/pam_limits.c (process_limit): Check upper and
	lower limit of nice value, fix off-by-one in conversation to rlim_t.
	* xtests/Makefile.am: Add new pam_limits test case.
	* xtests/limits.conf: New, config file for test case.
	* xtests/pam_limits1.c: New, test case for RLIMIT_NICE.
	* xtests/pam_limits1.sh: Likewise.
	* xtests/pam_limits1.pamd: Likewise.

2007-06-25  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_access/pam_access.c (list_match): Use saveptr of strtok_r
	result for recursive calls.
	* xtests/Makefile.am: Add new pam_access test cases.